Details
-
Bug
-
Status: Closed
-
P2: Important
-
Resolution: Done
-
Qt Creator 4.2.1
-
None
-
Arch Linux 64-bit
Description
I've been seeing this happen repeatedly with the current Arch Linux Creator package: 4.2.1 built with Qt 5.8.0. It seems to be related to switching back and forth between the sidebar help viewer and the fullscreen help viewer: if I put the text cursor onto some Qt class, method or enum or whatever in the editor, then hit F1 to open up the help about that, there is the old bug that the help viewer does not scroll to the right place (probably because layout is not done yet at the time it tries to find the position to scroll to - that bug is many years old now); so usually I hit F1 again, and if I have not moved the text cursor, that makes it switch to fullscreen help (which is not what I want, actually); then when I switch back to Edit mode, sometimes (but not every time), the cursor becomes a wait cursor (a spinning progress indicator in my case), and stays that way for the rest of the session. Which makes it kindof hard to precisely select text in the editor, because the cursor is in the way.
Sorry I don't know how to reproduce it reliably, but it's been happening ever since the 5.8.0 package upgrade was released to the Arch repos (with a new QtCreator package around the same time). Typically if I'm using Creator all day, it will happen eventually. Maybe it's not even related to switching to help mode, but it seems like it is.
Attachments
Issue Links
- relates to
-
QTBUG-54172 WebEngineView fails to scroll to anchor when making it visible directly before calling setUrl
-
- Closed
-
- replaces
-
QTCREATORBUG-17707 Mouse cursor keeps hanging in Hourglass/Waiting shape after switching to help
-
- Closed
-